# CarlaAir

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT_QUICKSTART.md  BuildWindows.ps1  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CarlaAir.ps1  IMPROVEMENTS.md  LICENSE  QUICK_REFERENCE.md  README.md  README_CN.md  RELEASE_v0.1.7.md  STARTUP_GUIDE.md  STARTUP_GUIDE_CN.md  SetupEnv.bat  StartCarlaAir.bat  StopCarlaAir.bat  TestEnv.bat  WINDOWS_PORTING_HANDOFF_CN.md  WINDOWS_PORTING_HANDOFF_EN.md  auto_extract_and_launch.sh  auto_traffic.py  build_carla_deps_macos.sh  carlaAir.sh  fly_drone_keyboard.py  pack_simworld.sh  test_drone_in_carla.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-ue5.yml  lint.yml
AirSimConfig/: settings.json
CarlaAir_Release/guide/: COORDINATE_SYSTEMS.md  FAQ.md  Quick-Start.md
CarlaAir_Release/install/: README.md  carla_air.sh  settings.json  setup.sh
CarlaAir_Release/source/: ARCHITECTURE.md  BUILD_GUIDE.md  FUTURE_DEVELOPMENT.md  MODIFICATIONS.md  README.md
Import/: README.md
LibCarla/cmake/: CMakeLists.txt
LibCarla/cmake/client/: CMakeLists.txt
LibCarla/cmake/fast_dds/: CMakeLists.txt
LibCarla/cmake/pytorch/: CMakeLists.txt
LibCarla/cmake/server/: CMakeLists.txt
LibCarla/cmake/test/: CMakeLists.txt
Progress_record/: CARLA-Air Teaser 分镜脚本 v2.md  CARLA-Air 项目背景简报.md  SimWorld_Technical_Document.md  carla-air v0.1 Release 前开发测试任务.md  carlaAir_demo_shooting_guide.md  carlaAir_demo_shooting_guide_v4.md  carlaAir_demo_shooting_guide_v5.md  carla_air_final_test_plan.md  demo_prompt.md  final_test_report.md  second_round_test_report.md  开发进度记录.md  测试计划_二轮测试_CARLA-Air 第二轮测试任务单.md
Progress_record/final_test/: phase1_results.json  phase1_startup_basic.py  phase2_carla_core.py  phase2_results.json  phase3_airsim_core.py  phase3_results.json  phase4_combined.py  phase4_results.json  phase5_results.json  phase5_stress_recovery.py  sensor_fix_test2.json  sensor_fix_test3.json  t10_results.json  t11_1_results.json  t2_11_results.json  t2_3_results.json  t3_6_results.json  t4_1_sensor_limit.json  t5_5_additional.json  walker_ai_extended.json  walker_ai_results.json
PythonAPI/carla/: pyproject.toml  requirements.txt  scene_layout.py  setup.py
PythonAPI/carla/agents/: requirements.txt
PythonAPI/carla/agents/navigation/: basic_agent.py  behavior_agent.py  behavior_types.py  constant_velocity_agent.py  controller.py  global_route_planner.py  local_planner.py
PythonAPI/carla/agents/tools/: hints.py  misc.py
PythonAPI/carla/source/carla/: __carla_rss.pyi  __init__.py  libcarla.pyi
PythonAPI/carla/source/carla/ad/: __init__.pyi  physics.pyi
PythonAPI/carla/source/carla/ad/map/: access.pyi  config.pyi  intersection.pyi  landmark.pyi  lane.pyi  point.pyi  restriction.pyi  route.pyi
PythonAPI/carla/source/carla/ad/rss/: core.pyi  situation.pyi  unstructured.pyi  world.pyi
PythonAPI/carla/source/libcarla/: Client.cpp  Geom.cpp
PythonAPI/docs/: bp_doc_gen.py  client.yml  doc_gen.py  doc_gen_snipets.py  map.yml
PythonAPI/examples/: .gitignore  V2XDemo.py  automatic_control.py  bounding_boxes.py  client_bounding_boxes.py  draw_skeleton.py  dynamic_weather.py  generate_traffic.py  get_component_test.py  invertedai_traffic.py  lidar_to_camera.py  manual_control.py  manual_control_carsim.py  manual_control_chrono.py  manual_control_fisheye.py  manual_control_steeringwheel.py  no_rendering_mode.py  open3d_lidar.py  requirements.txt  sensor_synchronization.py  show_recorder_actors_blocked.py  show_recorder_collisions.py  show_recorder_file_info.py  start_recording.py  start_replaying.py  synchronous_mode.py  test_addsecondvx.py  tutorial.py  tutorial_gbuffer.py  vehicle_gallery.py  vehicle_physics.py  visualize_multiple_sensors.py
PythonAPI/util/: apply_texture.py  check_collisions_substepping.py  check_lidar_bb.py  check_map.py  check_raycast_sensors_determinism.py  config.py  environment.py  extract_spawn_points.py  lane_explorer.py  osm_to_xodr.py  performance_benchmark.py  raycast_sensor_testing.py  requirements.txt  test_connection.py  vehicle_physics_tester.py
Unreal/CarlaUE4/: .ignore  CarlaUE4.kdev4  CarlaUE4.pro  CarlaUE4.uproject  CarlaUE4.workspace  CarlaUE4CodeCompletionFolders.txt  CarlaUE4Header.pri  CarlaUE4Includes.pri  CarlaUE4Source.pri
Unreal/CarlaUE5/: CarlaUE5.uproject  CarlaUE5CodeCompletionFolders.txt  CarlaUE5Config.pri  CarlaUE5Header.pri  CarlaUE5Includes.pri
Util/: CreateDebian.sh  ImportAssets.sh  SimWorld.sh  download_from_gdrive.py  pack_simworld.sh
Util/BuildTools/: Ad-rss.sh  Bootstrap.bat  BuildCarlaUE4.bat  BuildCarlaUE4.sh  BuildLibCarla.bat  BuildLibCarla.sh  BuildOSM2ODR.bat  BuildOSM2ODR.sh  BuildOSMRenderer.sh  BuildPythonAPI.bat  BuildPythonAPI.sh  BuildUE4Plugins.bat  BuildUE4Plugins.sh  BuildUtilsDocker.sh  Check.sh  Deploy.sh  Environment.bat  Environment.sh  Import.py  Import.sh  Package.bat  Package.sh  Prettify.sh  (+4 more)
env_setup/: SetupEnv.ps1  TestEnv.ps1  setup_env.sh  test_env.sh
examples/: __init__.py  aerial_surveillance.py  air_ground_sync.py  airsim_utils.py  auto_traffic.py  city_tour.py  data_collector.py  demo_drive_and_fly.py  demo_flight_city.py  drive_vehicle.py  drone_car_chase.py  drone_traj_col_airsim.py  drone_traj_playback_airsim.py  fly_drone_keyboard.py  human_traj_col.py  human_traj_playback.py  quick_start_showcase.py  sensor_gallery.py  switch_maps.py  test_airsim_drone.py  test_carla_features.py  walk_pedestrian.py
examples_record_demo/: demo_director.py  record_drone.py  record_vehicle.py  record_walker.py
scripts/: build_python_api_macos.sh  fix_blueprint_deprecated_nodes.py  fix_carla_stale_blueprint_nodes.py  generate_carlaair_images.py  generate_carlaair_showcase.py  inspect_blueprint_nodes.py  integration_test.py  restore_carla_source_assets.sh  run_carlaair.sh  smoke_ue57_macos.sh
test_script/: __init__.py  diagnostic_test.py  drone_traj_col.py  drone_traj_playback.py  human_traj_col.py  human_traj_playback.py  test_drone_in_carla.py
(+570 files in other folders)
